--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hyperedge_creators",
+  "name": "hyperedge_brands",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
