--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-built": "npx prisma generate && next build"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
