--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.9.1",
+    "@prisma/extension-accelerate": "^0.6.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -39,7 +40,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
-    "prisma": "^5.7.0",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
