--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
+    "firebase": "^10.9.0",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
