--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^5.0.1",
     "react-resizable-panels": "^1.0.4",
     "react-select": "^5.8.0",
+    "react-simple-star-rating": "^5.1.7",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
