--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.14.202",
     "@types/nodemailer": "^6.4.14",
-    "axios": "^1.6.2",
+    "axios": "^1.6.8",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -53,6 +55,8 @@
     "react-resizable-panels": "^1.0.4",
     "react-select": "^5.8.0",
     "react-simple-star-rating": "^5.1.7",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^14.23.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
